assets/css/main.css
@import url('https://fonts.googleapis.com/css2?family=Alegreya+Sans:ital,wght@0,100;0,300;0,400;0,500;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,700;1,800;1,900&family=Alegreya:ital,wght@0,400..900;1,400..900&display=swap');

:root {
    --accent-color: #cc0000;
    --body-font: "Alegreya";
    --header-font: "Alegreya Sans";
}

body {
    width: min(50rem, 90%);
    min-height: 100vh;
    margin: auto;
    display: grid;
    grid-template-rows: auto 1fr auto;
    font-family: var(--body-font), serif;
    font-optical-sizing: auto;
    font-weight: 400;
    font-style: normal;
    font-size: 1.45rem;
    overflow-wrap: break-word;
    display: block;
}

:is(h1, h2, h3, h4, h5, h6) {
    font-family: var(--header-font), sans-serif;
    font-weight: 900;
    font-style: normal;
}

a {
    color: var(--accent-color);
    text-decoration: none;
}

.profile-pic {
    display: block;
    margin: auto;
    width: min(10rem, 40%);
    border-radius: 50%;
    border: 0.5rem solid var(--accent-color);
}

